--- a/Diagnosis.App/Screens/Login.xaml
+++ b/Diagnosis.App/Screens/Login.xaml
@@ -19,8 +19,8 @@
             <DockPanel>
                 <Label>Доктор:</Label>
                 <ComboBox x:Name="doctors"
-                          SelectedItem="{Binding DoctorsProducer.CurrentDoctor}"
-                          ItemsSource="{Binding DoctorsProducer.Doctors}">
+                          SelectedItem="{Binding CurrentDoctor}"
+                          ItemsSource="{Binding Doctors}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Converter={StaticResource ManToShortName}}" />
