--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Diagnosis.App.Screens.Patients"
+﻿<UserControl x:Class="Diagnosis.App.Screens.Patients"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +10,7 @@
              FocusManager.IsFocusScope="True"
              d:DesignHeight="300" d:DesignWidth="400">
     <!--PatientsListViewModel-->
-    <Page.Resources>
+    <UserControl.Resources>
         <Style x:Key="SexCheckbox" TargetType="{x:Type CheckBox}">
             <Setter Property="Template">
                 <Setter.Value>
@@ -24,7 +24,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </Page.Resources>
+    </UserControl.Resources>
 
     <Grid HorizontalAlignment="Stretch" MaxWidth="500" MinWidth="300">
         <Grid.RowDefinitions>
@@ -84,4 +84,4 @@
             </DataGrid.CellStyle>
         </DataGrid>
     </Grid>
-</Page>
+</UserControl>
