--- a/Diagnosis.App/Controls/CardParts/Course.xaml
+++ b/Diagnosis.App/Controls/CardParts/Course.xaml
@@ -6,7 +6,7 @@
              xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <!--CourseViewModel-->
+    <!-- ShortCourseViewModel-->
     <UserControl.Resources>
         <ResourceDictionary>
             <conv:CountToAppointmentsLabel x:Key="CountToAppLabel" />
