--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -70,7 +70,7 @@
                 </Grid>
             </DockPanel>
             <DockPanel>
-                <editors:CategoryChooser HorizontalAlignment="Left" />
+                <editors:CategoryChooser HorizontalAlignment="Left"  DataContext="{Binding DataContext, ElementName=editor}" />
             </DockPanel>
             <DockPanel>
                 <Label Content="дата" />
@@ -119,19 +119,19 @@
                     <TextBlock Text="Добавить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.CommitCommand}" ToolTip="Закрыть редактор, сохранив все изменения (Ctrl + S)">
+            <Button Command="{Binding SaveCommand}" ToolTip="Закрыть редактор, сохранив все изменения (Ctrl + S)">
                 <DockPanel>
                     <Image Source="{StaticResource saveImage}" />
                     <TextBlock Text="Закрыть" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.RevertCommand}" ToolTip="Закрыть редактор без сохранения изменений (Esc)">
+            <Button Command="{Binding CancelCommand}" ToolTip="Закрыть редактор без сохранения изменений (Esc)">
                 <DockPanel>
                     <Image Source="{StaticResource undoImage}" />
                     <TextBlock Text="Отменить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.DeleteCommand}" Margin="0,10,0,0" ToolTip="Удалить текущую запись (Del)">
+            <Button Command="{Binding DeleteCommand}" Margin="0,10,0,0" ToolTip="Удалить текущую запись (Del)">
                 <DockPanel>
                     <Image Source="{StaticResource deleteImage}"  Width="16" />
                     <TextBlock Text="Удалить" />
