--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -29,6 +29,9 @@
             <DataTemplate DataType="{x:Type vm:PatientsListViewModel}">
                 <screen:Patients />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:PatientEditorViewModel}">
+                <screen:NewPatientEditor />
+            </DataTemplate>
         </ResourceDictionary>
     </Window.Resources>
 
