--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -1,112 +1,18 @@
 ﻿<Application x:Class="Diagnosis.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:vm="clr-namespace:Diagnosis.ViewModels"
-             xmlns:conv="clr-namespace:Diagnosis.App.Converters"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
              Startup="Application_Startup">
     <Application.Resources>
-        <conv:IHierarchicalCheckableToBackground x:Key="IHierarchicalCheckableToBackground" />
-        <conv:NegBooleanToVisibilityConverter x:Key="NegBooleanToVisibilityConverter" />
-        <conv:NegateConverter x:Key="NegateBoolean" />
-        <conv:CountToVisibility x:Key="CountToVisibility" />
-        <conv:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <conv:AgeToYearsLabel x:Key="AgeToLabel" />
-        <conv:BoolToSexSign x:Key="SexToSign" />
-        <conv:OffsetUnitToUnitLabel x:Key="OffsetUnitToUnitLabel" />
-        <conv:DateOffsetToUnitLabel x:Key="DateOffsetToUnitLabel" />
-        <conv:Summator x:Key="SummatorConverter" />
-        <conv:ManToShortName x:Key="ManToShortName" />
-        <conv:EqualityToBoolConverter x:Key="EqualityToBool" />
-        <conv:IsLastItem x:Key="IsLastItem" />
-        <conv:DateIntervalLabel x:Key="DateIntervalLabel" />
-        <conv:DateLabel x:Key="DateLabel" />
-        <conv:LessThanConverter x:Key="LessThan" />
-        <conv:NullToVisibilityConverter x:Key="NullToVis" />
-        <conv:AgeToYearsLabel x:Key="ageLabel" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Converters/Shared.xaml" />
+                <ResourceDictionary Source="Resources/Shared.xaml" />
+                <ResourceDictionary Source="Styles/Shared.xaml" />
+            </ResourceDictionary.MergedDictionaries>
 
-        <BitmapImage x:Key="closeImage" UriSource="Resources/Close_16xLG.png" />
-        <BitmapImage x:Key="addImage" UriSource="/Resources/AddControl_371.png" />
-        <BitmapImage x:Key="saveImage" UriSource="/Resources/save_16xLG.png" />
-        <BitmapImage x:Key="undoImage" UriSource="/Resources/Arrow_UndoRevertRestore_16xLG.png" />
-        <BitmapImage x:Key="deleteImage" UriSource="/Resources/Delete_black_32x32.png" />
-        <BitmapImage x:Key="editImage" UriSource="/Resources/126_Edit_24x24_72.png" />
-        <BitmapImage x:Key="findImage" UriSource="/Resources/Find_5650.png" />       
-
-
-        <s:Boolean x:Key="True">True</s:Boolean>
-        <s:Boolean x:Key="False">False</s:Boolean>
-
-        <Style TargetType="TextBox">
-            <Setter Property="Height" Value="23" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-        </Style>
-        <Style TargetType="ComboBox">
-            <Setter Property="Height" Value="23" />
-        </Style>
-
-        <Style TargetType="TextBlock" x:Key="ScreenTitle">
-            <Setter Property="FontSize" Value="20" />
-        </Style>
-
-        <Style TargetType="Label" x:Key="label">
-            <Setter Property="VerticalAlignment" Value="Center" />
-        </Style>
-        <Style TargetType="Label" x:Key="label120" BasedOn="{StaticResource label}">
-            <Setter Property="Width" Value="120" />
-        </Style>
-        <Style TargetType="Label" x:Key="label90" BasedOn="{StaticResource label}">
-            <Setter Property="Width" Value="90" />
-        </Style>
-
-        <Style TargetType="TextBlock" x:Key="watermark">
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="Margin">
-                <Setter.Value>
-                    <Thickness Left="5" />
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style TargetType="ListView" x:Key="list">
-            <Setter Property="BorderThickness" Value="0" />
-        </Style>
-
-        <Style TargetType="Grid" x:Key="gridIsDirty">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Editable.IsDirty}" Value="True">
-                    <Setter Property="Background" Value="#FFFFCCCC" />
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-
-        <Style TargetType="StackPanel" x:Key="buttonsBar">
-            <Setter Property="Orientation" Value="Horizontal" />
-            <Setter Property="Margin" Value="0,0,0,10" />
-        </Style>
-
-        <Style TargetType="{x:Type Button}" x:Key="barButton">
-            <Setter Property="Margin" Value="0,0,10,0" />
-            <Setter Property="Padding" Value="4" />
-        </Style>
-
-        <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}" x:Key="squareButton" >
-            <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" />
-        </Style>
-
-        <Style TargetType="Image" x:Key="buttonIcon">
-            <Setter Property="Margin" Value="0,0,5,0" />
-            <Setter Property="SnapsToDevicePixels" Value="True" />
-            <Setter Property="Height" Value="16" />
-            <Setter Property="Width" Value="16" />
-        </Style>
-
-        <Style TargetType="DockPanel" x:Key="formLine">
-            <Setter Property="Margin">
-                <Setter.Value>
-                    <Thickness Bottom="10"></Thickness>
-                </Setter.Value>
-            </Setter>
-        </Style>
+                <s:Boolean x:Key="True">True</s:Boolean>
+                <s:Boolean x:Key="False">False</s:Boolean>                
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
