--- a/Diagnosis.App/Screens/NewCard.xaml
+++ b/Diagnosis.App/Screens/NewCard.xaml
@@ -11,82 +11,69 @@
     <!-- CardViewModel -->
     <UserControl.Resources>
         <ResourceDictionary>
-            <Style x:Key="areaButton" TargetType="Button">
-                <Setter Property="BorderThickness" Value="0" />
-                <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" />
-            </Style>
-
-            <Button x:Key="toggle" x:Shared="False"
-                    HorizontalAlignment="Left"
-                    Command="{Binding Editable.EditCommand}"
-                    Margin="0,0,0,5"
-                    Style="{StaticResource areaButton}">
-                <card:PatientHeader Padding="5,0,5,0" />
-            </Button>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
+    <Grid Margin="10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="180" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+
+        <!-- PatientViewModel -->
         <Grid DataContext="{Binding Patient}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
-                <RowDefinition Height="73*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <ContentControl Content="{StaticResource toggle}"
-                                        ToolTip="Редактировать данные пациента"
-                                        ToolTipService.Placement="Bottom"
-                                        ToolTipService.HorizontalOffset="50" />
+            <Button Style="{StaticResource squareButton}"
+                    Height="30"
+                    Command="{Binding EditCommand}"
+                    ToolTip="Редактировать данные пациента" HorizontalAlignment="Right" VerticalAlignment="Top">
+                <DockPanel>
+                    <Image Source="{StaticResource editImage}" Height="20" />
+                </DockPanel>
+            </Button>
 
-            <controls:AlignableWrapPanel x:Name="courses" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Right" HorizontalContentAlignment="Right">
-                <controls:AlignableWrapPanel.Resources>
-                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource barButton}" />
-                </controls:AlignableWrapPanel.Resources>
+            <card:PatientHeader Padding="5,0,5,0" />
 
-                <TextBlock Grid.ColumnSpan="2"
-                                       VerticalAlignment="Center"
-                                       HorizontalAlignment="Right"
-                                       Margin="0,0,10,5"
-                                       Visibility="{Binding NoCourses, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                       Text="У пациента нет курсов" />
+            <StackPanel x:Name="courses" Grid.Row="1">
+                <StackPanel.Resources>
+                    <!--<Style TargetType="{x:Type Button}" BasedOn="{StaticResource barButton}" />-->
+                </StackPanel.Resources>
 
-                <Grid VerticalAlignment="Center" Visibility="{Binding NoCourses, Converter={StaticResource NegBooleanToVisibilityConverter}}" Margin="0,0,0,5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition MinWidth="120" MaxWidth="250" />
-                    </Grid.ColumnDefinitions>
+                <TextBlock Text="У пациента нет курсов"
+                            HorizontalAlignment="Center"
+                            Visibility="{Binding NoCourses, Converter={StaticResource BooleanToVisibilityConverter}}" />
 
-                    <TextBlock Text="Курс" Margin="0,0,10,0"
-                                       VerticalAlignment="Center" />
-
+                <StackPanel VerticalAlignment="Center" Visibility="{Binding NoCourses, Converter={StaticResource NegBooleanToVisibilityConverter}}" Margin="0,0,0,10">
+                    <TextBlock Text="Курс" Margin="0,0,10,5" />
                     <ComboBox ItemsSource="{Binding Courses}"
-        			                  SelectedItem="{Binding SelectedCourse}"
-                                      Grid.Column="1">
+        			        SelectedItem="{Binding SelectedCourse}"
+                            Grid.Column="1">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <card:Course />
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
-                </Grid>
+                </StackPanel>
                 <Button Command="{Binding StartCourseCommand}"
                                     Height="26"
-                                    Margin="10,0,0,5"
                                     VerticalAlignment="Center"
         			                CommandParameter="{Binding}"
                                     Content="Начать курс" />
-            </controls:AlignableWrapPanel>
+            </StackPanel>
         </Grid>
 
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="1" Margin="10,0,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
+
+            <!-- CourseViewModel -->
             <card:AppointmentsTabs DataContext="{Binding Course}"
                                Visibility="{Binding Patient.NoCourses, Converter={StaticResource NegBooleanToVisibilityConverter}}" />
             <!--<card:Appointment DataContext="{Binding Appointment}" Grid.Row="1" />-->
