--- a/Diagnosis.App/Styles/Shared.xaml
+++ b/Diagnosis.App/Styles/Shared.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!-- base control styles -->
     <Style TargetType="TextBox">
         <Setter Property="Height" Value="23" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
@@ -8,41 +9,7 @@
         <Setter Property="Height" Value="23" />
     </Style>
 
-    <Style TargetType="TextBlock" x:Key="ScreenTitle">
-        <Setter Property="FontSize" Value="20" />
-    </Style>
-
-    <Style TargetType="Label" x:Key="label">
-        <Setter Property="VerticalAlignment" Value="Center" />
-    </Style>
-    <Style TargetType="Label" x:Key="label120" BasedOn="{StaticResource label}">
-        <Setter Property="Width" Value="120" />
-    </Style>
-    <Style TargetType="Label" x:Key="label90" BasedOn="{StaticResource label}">
-        <Setter Property="Width" Value="90" />
-    </Style>
-
-    <Style TargetType="TextBlock" x:Key="watermark">
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin">
-            <Setter.Value>
-                <Thickness Left="5" />
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style TargetType="ListView" x:Key="list">
-        <Setter Property="BorderThickness" Value="0" />
-    </Style>
-
-    <Style TargetType="Grid" x:Key="gridIsDirty">
-        <Style.Triggers>
-            <DataTrigger Binding="{Binding Editable.IsDirty}" Value="True">
-                <Setter Property="Background" Value="#FFFFCCCC" />
-            </DataTrigger>
-        </Style.Triggers>
-    </Style>
-
+    <!-- buttons -->
     <Style TargetType="StackPanel" x:Key="buttonsBar">
         <Setter Property="Orientation" Value="Horizontal" />
         <Setter Property="Margin" Value="0,0,0,10" />
@@ -64,11 +31,40 @@
         <Setter Property="Width" Value="16" />
     </Style>
 
+    <!-- forms -->
     <Style TargetType="DockPanel" x:Key="formLine">
         <Setter Property="Margin">
             <Setter.Value>
                 <Thickness Bottom="10"></Thickness>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style TargetType="Label" x:Key="label">
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
+    <Style TargetType="Label" x:Key="label120" BasedOn="{StaticResource label}">
+        <Setter Property="Width" Value="120" />
+    </Style>
+    <Style TargetType="Label" x:Key="label90" BasedOn="{StaticResource label}">
+        <Setter Property="Width" Value="90" />
+    </Style>
+
+    <Style TargetType="TextBlock" x:Key="watermark">
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin">
+            <Setter.Value>
+                <Thickness Left="5" />
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <!-- misc -->
+    <Style TargetType="TextBlock" x:Key="ScreenTitle">
+        <Setter Property="FontSize" Value="20" />
+    </Style>
+
+    <Style TargetType="ListView" x:Key="list">
+        <Setter Property="BorderThickness" Value="0" />
     </Style>
 </ResourceDictionary>
