--- a/Diagnosis.App/Controls/CardParts/PatientHeader.xaml
+++ b/Diagnosis.App/Controls/CardParts/PatientHeader.xaml
@@ -4,13 +4,33 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
+             x:Name="header"
              d:DesignHeight="30" d:DesignWidth="300">
     <!--PatientViewModel-->
-    <Grid>
+    <Grid Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
+
+        <Button                     Height="26"  Width="26"
+                    Command="{Binding EditCommand}"
+                    ToolTip="Редактировать данные пациента" HorizontalAlignment="Right" VerticalAlignment="Top" Grid.RowSpan="2">
+            <Button.Style>
+                <Style>
+                    <Setter Property="Button.Visibility" Value="Collapsed"></Setter>
+
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=header, Path=IsMouseOver}" Value="true">
+                            <Setter Property="Button.Visibility" Value="Visible"></Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+            <DockPanel>
+                <Image Source="{StaticResource editImage}" Height="16" />
+            </DockPanel>
+        </Button>
 
         <DockPanel>
             <TextBlock Style="{StaticResource ScreenTitle}"
